@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          a new FileFinder plugin has been added, FileFinder::Filter
+          (Thanks, Christopher J. Madsen!)
 
 4.300003  2011-10-31 23:58:19 America/New_York
           If no credentials are found on disk, UploadToCPAN will now prompt for
